// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> LivePreview story renders snapshot 1`] = `
<div
  style="padding: 24px; width: 600px;"
>
  <div
    class="css-1v66a8t"
    role="banner"
  >
    <div
      class="css-1879pua"
    >
      <div
        class="css-1f3aume"
      >
        <div
          class="css-1ft6wgl"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q73dgu-MuiSvgIcon-root-iconSize-staticStyle-StyledSvgIcon"
            data-jest-file-name="IconInfoCircleLarge.svg"
            data-jest-svg-name="IconInfoCircleLarge"
            data-testid="IconInfoCircleLarge"
            fillcontrast="white"
            focusable="false"
            viewBox="0 0 22 22"
          />
        </div>
      </div>
      Banner text lorem ipsum dolor mit
    </div>
    <button
      aria-label="Close"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-ozv4bb-MuiButtonBase-root-MuiIconButton-root-tertiary-small-StyledButtonIcon"
      tabindex="0"
      type="button"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dj49f0-MuiSvgIcon-root-StyledSvgIcon"
          data-jest-file-name="IconXMarkSmall.svg"
          data-jest-svg-name="IconXMarkSmall"
          data-testid="IconXMarkSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    style="height: 24px;"
  />
  <div
    class="css-1ran7dc"
    role="banner"
  >
    <div
      class="css-1879pua"
    >
      <div
        class="css-1f3aume"
      >
        <div
          class="css-1ft6wgl"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q73dgu-MuiSvgIcon-root-iconSize-staticStyle-StyledSvgIcon"
            data-jest-file-name="IconInfoCircleLarge.svg"
            data-jest-svg-name="IconInfoCircleLarge"
            data-testid="IconInfoCircleLarge"
            fillcontrast="white"
            focusable="false"
            viewBox="0 0 22 22"
          />
        </div>
      </div>
      Banner text lorem ipsum dolor mit
      <div
        style="padding: 5px;"
      />
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ov1h50-MuiTypography-root-MuiLink-root-defaultStyle-StyledLink"
        href="/"
      >
        Learn More
      </a>
    </div>
    <button
      aria-label="Close"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-jjv6wj-MuiButtonBase-root-MuiIconButton-root-tertiary-small-StyledButtonIcon"
      tabindex="0"
      type="button"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dj49f0-MuiSvgIcon-root-StyledSvgIcon"
          data-jest-file-name="IconXMarkSmall.svg"
          data-jest-svg-name="IconXMarkSmall"
          data-testid="IconXMarkSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    style="height: 24px;"
  />
  <div
    class="css-rew8a4"
    role="banner"
  >
    <div
      class="css-1879pua"
    >
      <div
        class="css-1f3aume"
      >
        <div
          class="css-1ft6wgl"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q73dgu-MuiSvgIcon-root-iconSize-staticStyle-StyledSvgIcon"
            data-jest-file-name="IconInfoCircleLarge.svg"
            data-jest-svg-name="IconInfoCircleLarge"
            data-testid="IconInfoCircleLarge"
            fillcontrast="white"
            focusable="false"
            viewBox="0 0 22 22"
          />
        </div>
      </div>
      Stylable. Should have pink background color
    </div>
    <button
      aria-label="Close"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-ozv4bb-MuiButtonBase-root-MuiIconButton-root-tertiary-small-StyledButtonIcon"
      tabindex="0"
      type="button"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dj49f0-MuiSvgIcon-root-StyledSvgIcon"
          data-jest-file-name="IconXMarkSmall.svg"
          data-jest-svg-name="IconXMarkSmall"
          data-testid="IconXMarkSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`<Banner /> Test story renders snapshot 1`] = `
<div
  class="css-1v66a8t"
  role="banner"
>
  <div
    class="css-1879pua"
  >
    <div
      class="css-1f3aume"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1q73dgu-MuiSvgIcon-root-iconSize-staticStyle-StyledSvgIcon"
          data-jest-file-name="IconInfoCircleLarge.svg"
          data-jest-svg-name="IconInfoCircleLarge"
          data-testid="IconInfoCircleLarge"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 22 22"
        />
      </div>
    </div>
    test text
  </div>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-ozv4bb-MuiButtonBase-root-MuiIconButton-root-tertiary-small-StyledButtonIcon"
    tabindex="0"
    type="button"
  >
    <div
      class="css-1ft6wgl"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dj49f0-MuiSvgIcon-root-StyledSvgIcon"
        data-jest-file-name="IconXMarkSmall.svg"
        data-jest-svg-name="IconXMarkSmall"
        data-testid="IconXMarkSmall"
        fillcontrast="white"
        focusable="false"
        viewBox="0 0 14 14"
      />
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;
